[package]
name = "time"
version = "0.1.0"
edition = "2021"

[dependencies]
file_system = { path = "../File_system" }
log = { path = "../Log" }
shared = { path = "../Shared" }

[dev-dependencies]
drivers = { path = "../Drivers" }
log = { path = "../Log" }

[[test]]
name = "integration"
path = "Tests/integration.rs"
