[package]
name = "Virtual_file_system"
version = "0.1.0"
edition = "2021"

[dependencies]
File_system = { path = "../File_system" }
Task = { path = "../Task" }
Users = { path = "../Users" }
Time = { path = "../Time" }
Network = { path = "../Network" }
Synchronization = { version = "0.1.0", path = "../Synchronization" }
Futures = { version = "0.1.0", path = "../Futures" }

[dev-dependencies]
# Drivers = { path = "../Drivers" }
# LittleFS = { path = "../LittleFS" }

# [[test]]
# name = "Integration"
# path = "Tests/Integration.rs"
