[package]
name = "virtual_file_system"
version = "0.1.0"
edition = "2021"

[dependencies]
file_system = { path = "../File_system" }
task = { path = "../Task" }
users = { path = "../Users" }
time = { path = "../Time" }
network = { path = "../Network" }
synchronization = { version = "0.1.0", path = "../Synchronization" }
futures = { version = "0.1.0", path = "../Futures" }
log = { version = "0.1.0", path = "../Log" }

[dev-dependencies]
drivers = { path = "../Drivers" }
# drivers = { path = "../Drivers" }
# little_fs = { path = "../LittleFS" }

# [[test]]
# name = "integration"
# path = "Tests/Integration.rs"
