[package]
name = "Virtual_machine"
version = "0.1.0"
edition = "2021"
build = "Build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk.git" }
Shared = { version = "0.1.0", path = "../Shared" }
Memory = { version = "0.1.0", path = "../Memory" }
File_system = { version = "0.1.0", path = "../File_system" }
Task = { version = "0.1.0", path = "../Task" }
Time = { version = "0.1.0", path = "../Time"}
ABI = { version = "0.1.0", path = "../ABI" }

[dev-dependencies]
Users = { path = "../Users", version = "0.1.0" }
Drivers = { path = "../Drivers", version = "0.1.0" }

[[test]]
name = "Virtual_machine_test"
path = "Tests/Test.rs"
