[package]
name = "virtual_machine"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk.git", features = [
#    "multi-module",
#    "instruction-metering",
#] }
wamr-rust-sdk = { path = "../../../wamr-rust-sdk", features = [
    "multi-module",
    "instruction-metering",
] }

shared = { version = "0.1.0", path = "../Shared" }
memory = { version = "0.1.0", path = "../Memory" }
file_system = { path = "../File_system" }
virtual_file_system = { path = "../Virtual_file_system" }
little_fs = { path = "../LittleFS" }
task = { version = "0.1.0", path = "../Task" }
time = { version = "0.1.0", path = "../Time" }
abi = { version = "0.1.0", path = "../ABI" }
synchronization = { version = "0.1.0", path = "../Synchronization" }

[dev-dependencies]
users = { path = "../Users", version = "0.1.0" }
drivers = { path = "../Drivers", version = "0.1.0" }
futures = { path = "../Futures" }
log = { path = "../Log" }

[[test]]
name = "virtual_machine_test"
path = "Tests/test.rs"

[[test]]
name = "virtual_machine_test_2"
path = "Tests/test_2.rs"
