[package]
name = "Symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[target.'cfg(target_os = "espidf")'.dependencies]
paste = "1.0.14"
syn = "2.0.48"
quote = "1.0.35"

[target.'cfg(target_arch = "x86_64")'.dependencies]
paste = "1.0.14"
wamr-sys = { git = "https://github.com/AlixANNERAUD/wamr-sys.git" }
syn = "2.0.48"
quote = "1.0.35"

[dependencies]
proc-macro2 = "1.0.78"
