[package]
name = "drivers_native"
version = "0.1.0"
edition = "2024"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
file_system = { workspace = true }
futures = { workspace = true }
graphics = { workspace = true, features = ["rendering_xrgb8888"] }
task = { workspace = true }
log = { workspace = true }
synchronization = { workspace = true }

critical-section = { workspace = true, features = ["std"] }
pixels = "0.15.0"
winit = { version = "0.30", features = ["rwh_05"] }
rand = "0.9.0"
libc = { version = "0.2" }
embassy-executor = { workspace = true, default-features = false, features = [
  "arch-std",
  "executor-thread",
] }
