[package]
name = "drivers_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
file_system = { workspace = true }
log = { workspace = true }
shared = { workspace = true }
device = { workspace = true }

getrandom = { version = "0.4.1" }
sha2 = { version = "0.10", features = ["asm"] }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
