[package]
name = "drivers_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
file_system = { workspace = true }
log = { workspace = true }
shared = { workspace = true }
device = { workspace = true }
network = { workspace = true }
task = { workspace = true }
synchronization = { workspace = true }
embassy-futures = { workspace = true }
embedded-io-async = "0.6.1"
embedded-tls = { workspace = true }
embedded-io = "0.6.1"
rand_core = "0.6"

getrandom = { version = "0.4.2" }
sha2 = { version = "0.11" }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
