[package]
name = "drivers_wasm"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
file_system = { workspace = true }
memory = { workspace = true }
graphics = { workspace = true, features = ["rendering_xrgb8888"] }
critical-section = { workspace = true, features = ["std"] }
futures = { workspace = true }
synchronization = { workspace = true }
log = { workspace = true }

linked_list_allocator = { workspace = true }
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
embassy-executor = { workspace = true, default-features = false, features = [
  "arch-wasm",
  "executor-thread",
] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.64", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "MouseEvent",
  "KeyboardEvent",
  "EventTarget",
  "ImageData",
  "Element",
  "HtmlElement",
  "DomRect",
  "console",
  # OPFS features
  "StorageManager",
  "StorageEstimate",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemHandle",
  "FileSystemWritableFileStream",
  "WritableStream",
  "ReadableStream",
  "File",
  "Blob",
  "Navigator",
  "FileSystemGetFileOptions",
  "FileSystemCreateWritableOptions",
  "FileSystemSyncAccessHandle",
  "FileSystemReadWriteOptions",
  "WebGl2RenderingContext",
] }
js-sys = "0.3"
