[package]
name = "native_example"
version = "0.1.0"
edition = "2024"

[dependencies]
xila = { path = "../../", features = [
  "host",
  "virtual_machine",
  "graphics_rendering_xrgb8888",
] }
file_manager = { workspace = true }
command_line_shell = { workspace = true }
graphical_shell = { workspace = true }
wasm = { workspace = true }
terminal = { workspace = true }
settings = { workspace = true }
