[package]
name = "native_example"
version = "0.1.0"
edition = "2024"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
xila = { path = "../../", features = [
  "host",
  "graphics_rendering_xrgb8888",
  "executable_building",
] }
file_manager = { workspace = true }
command_line_shell = { workspace = true }
graphical_shell = { workspace = true }
wasm = { workspace = true }
terminal = { workspace = true }
settings = { workspace = true }
drivers_core = { workspace = true }
drivers_std = { workspace = true }
drivers_shared = { workspace = true }
drivers_native = { workspace = true }
