
[package]
name = "wasm_example"
version = "0.1.0"
authors = ["Alix ANNERAUD <alix@anneraud.fr>"]
edition = "2018"

[features]


[dependencies]
wasm-bindgen = "0.2.84"
xila = { path = "../../", features = ["Host", "graphics_rendering_xrgb8888"] }
file_manager = { workspace = true }
command_line_shell = { workspace = true }
graphical_shell = { workspace = true }
terminal = { workspace = true }
settings = { workspace = true }
console_error_panic_hook = "0.1"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# [profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
