
[package]
name = "wasm_example"
version = "0.1.0"
authors = ["Alix ANNERAUD <alix@anneraud.fr>"]
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
xila = { path = "../../", features = ["host", "graphics_rendering_xrgb8888"] }
file_manager = { workspace = true }
command_line_shell = { workspace = true }
graphical_shell = { workspace = true }
terminal = { workspace = true }
settings = { workspace = true }
console_error_panic_hook = "0.1"
drivers_wasm = { workspace = true }
drivers_core = { workspace = true }
drivers_shared = { workspace = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# [profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
