[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
xila = { path = "../../", features = ["wasm"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dev-dependencies]
xila = { path = "../../", features = [
  "host",
  "executable_building",
  "virtual_machine",
  "graphics_rendering_xrgb8888",
] }
drivers_core = { workspace = true }
drivers_std = { workspace = true }
drivers_shared = { workspace = true }
drivers_native = { workspace = true }

[[test]]
name = "calculator_test"
path = "tests/test.rs"
